@@ -13,8 +13,16 @@ otelJava {
   minJavaVersionSupported.set(JavaVersion.VERSION_21)
 }
 
+tasks.withType<JavaCompile>().configureEach {
+  with(options) {
+    compilerArgs.add("--enable-preview")
+  }
+}
+
 tasks.withType<Test>().configureEach {
   // needed for VirtualThreadTest
   jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+  // needed for structured concurrency test
+  jvmArgs("--enable-preview")
 }
